// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Element Normal element 1`] = `
"import { createVNode } from \\"vue\\";
const el = createVNode(\\"p\\");"
`;

exports[`Element Normal element with children 1`] = `
"import { createTextVNode, createVNode } from \\"vue\\";
const el = createVNode(\\"p\\", null, [createVNode(\\"i\\", null, [createTextVNode(\\"hello\\")]), createTextVNode(\\" \\"), ref.value]);"
`;

exports[`Element Normal element with normal attribute 1`] = `
"import { createVNode } from \\"vue\\";
const el = createVNode(\\"p\\", {
  \\"id\\": \\"1\\",
  \\"class\\": 'abc'
});"
`;

exports[`Element Normal element with normal attribute 2`] = `
"import { createVNode } from \\"vue\\";
const el = createVNode(\\"p\\", {
  \\"id\\": \\"1\\",
  \\"class\\": 'abc'
});"
`;

exports[`Element Normal element with spread attribute 1`] = `
"import { mergeProps, createVNode } from \\"vue\\";
const el = createVNode(\\"div\\", mergeProps({ ...attrs
}, {
  \\"id\\": \\"foo\\"
}));"
`;

exports[`Element Normal element(self-closing) 1`] = `
"import { createVNode } from \\"vue\\";
const el = createVNode(\\"input\\", {
  \\"id\\": \\"foo\\"
});"
`;

exports[`Element Normal elements with children 1`] = `
"import { createTextVNode, createVNode } from \\"vue\\";
const el = createVNode(\\"div\\", null, [createVNode(\\"p\\", null, [createTextVNode(\\"foo\\")]), createTextVNode(\\"TEXT\\"), ...slots.bar(), item]);"
`;
